--- a/index.html
+++ b/index.html
@@ -26,7 +26,86 @@
 				<h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
 				<button type="button">Request our service</button>
 			</section>
+
+			<!-- ADVANTAGES -->
+			<section>
+				<h2>ADVANTAGES</h2>
+				<ul>
+					<li>
+						<h3>ATTENTION TO DETAILS</h3>
+						<p>
+							We go into all the details and processes of your business to develop a customized
+							solution.
+						</p>
+					</li>
+					<li>
+						<h3>PUNCTUALITY</h3>
+						<p>
+							With us, you can feel safe and secure. An important principle of the company: respect
+							your time and deadlines.
+						</p>
+					</li>
+					<li>
+						<h3>PLANNING</h3>
+						<p>
+							You will be able to observe and participate in every phase of solution development and
+							implementation.
+						</p>
+					</li>
+					<li>
+						<h3>MODERN TECHNOLOGIES</h3>
+						<p>
+							We use innovative tools to solve assigned tasks. It's time to simplify work processes.
+						</p>
+					</li>
+				</ul>
+			</section>
+
+			<!-- SERVICES -->
+			<section>
+				<h2>What we do</h2>
+				<ul>
+					<li><img src="/images/servises/desktop/coding.jpg" alt="coding" /></li>
+					<li><img src="/images/servises/desktop/testing.jpg" alt="testing" /></li>
+					<li><img src="/images/servises/desktop/designing.jpg" alt="designing" /></li>
+				</ul>
+			</section>
+
+			<!-- TEAM -->
+			<section>
+				<h2>Our Team</h2>
+				<ul>
+					<li>
+						<img src="/images/team/desktop/walker.jpg" alt="Christopher Walker" />
+						<h3>Christopher Walker</h3>
+						<p>Product Designer</p>
+					</li>
+					<li>
+						<img src="/images/team/desktop/evans.jpg" alt="Kylie Evans" />
+						<h3>Kylie Evans</h3>
+						<p>Frontend Developer</p>
+					</li>
+					<li>
+						<img src="/images/team/desktop/harris.jpg" alt="Ryan Harris" />
+						<h3>Ryan Harris</h3>
+						<p>Marketing</p>
+					</li>
+					<li>
+						<img src="/images/team/desktop/moore.jpg" alt="Tyler Moore" />
+						<h3>Tyler Moore</h3>
+						<p>UI Designer</p>
+					</li>
+				</ul>
+			</section>
 		</main>
-		<section></section>
+
+		<footer>
+			<a href="/index.html"><span>Web</span>Studio</a>
+			<address>
+				<p>695 Park Ave, NY 10065, USA</p>
+				<a href="mailto:info@devstudio.com">info@devstudio.com</a>
+				<a href="tel:+12127724150">+1 212-772-4150</a>
+			</address>
+		</footer>
 	</body>
 </html>
