--- a/index.html
+++ b/index.html
@@ -4,57 +4,72 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="/css/styles.css" />
 		<title>Document</title>
 	</head>
 	<body>
 		<header>
-			<a href="/index.html"><span>Web</span>Studio</a>
-			<ul>
-				<li><a href="/index.html">Studio</a></li>
-				<li><a href="/portfolio.html">Portfolio</a></li>
-				<li><a href="#contacts">Contacts</a></li>
-			</ul>
-			<address>
-				<a href="mailto:info@devstudio.com">info@devstudio.com</a>
-				<a href="tel:+12127724150">+1 212-772-4150</a>
-			</address>
+			<a class="logo logo-top" href="/index.html"><span class="logo-accent">Web</span>Studio</a>
+			<nav class="nav">
+				<ul class="nav-list">
+					<li class="nav-item">
+						<a class="nav-link nav-link-current" href="/index.html">Studio</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/portfolio.html">Portfolio</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#contacts">Contacts</a>
+					</li>
+				</ul>
+			</nav>
+			<div class="header-address">
+				<a class="header-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+				<a class="header-address-link" href="tel:+12127724150">+1 212-772-4150</a>
+			</div>
 		</header>
 
 		<main>
 			<!-- HERO -->
-			<section>
-				<h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
-				<button type="button">Request our service</button>
+			<section class="hero">
+				<h1 class="hero-title">EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
+				<button class="hero-btn" type="button">Request our service</button>
 			</section>
 
 			<!-- ADVANTAGES -->
 			<section>
-				<h2>ADVANTAGES</h2>
-				<ul>
-					<li>
-						<h3>ATTENTION TO DETAILS</h3>
-						<p>
+				<h2 class="section-title">ADVANTAGES</h2>
+				<ul class="advantages-list">
+					<li class="advantages-item">
+						<h3 class="advantages-name">ATTENTION TO DETAILS</h3>
+						<p class="advantages-text">
 							We go into all the details and processes of your business to develop a customized
 							solution.
 						</p>
 					</li>
-					<li>
-						<h3>PUNCTUALITY</h3>
-						<p>
+					<li class="advantages-item">
+						<h3 class="advantages-name">PUNCTUALITY</h3>
+						<p class="advantages-text">
 							With us, you can feel safe and secure. An important principle of the company: respect
 							your time and deadlines.
 						</p>
 					</li>
-					<li>
-						<h3>PLANNING</h3>
-						<p>
+					<li class="advantages-item">
+						<h3 class="advantages-name">PLANNING</h3>
+						<p class="advantages-text">
 							You will be able to observe and participate in every phase of solution development and
 							implementation.
 						</p>
 					</li>
-					<li>
-						<h3>MODERN TECHNOLOGIES</h3>
-						<p>
+					<li class="advantages-item">
+						<h3 class="advantages-name">MODERN TECHNOLOGIES</h3>
+						<p class="advantages-text">
 							We use innovative tools to solve assigned tasks. It's time to simplify work processes.
 						</p>
 					</li>
@@ -63,48 +78,89 @@
 
 			<!-- SERVICES -->
 			<section>
-				<h2>What we do</h2>
-				<ul>
-					<li><img src="/images/servises/desktop/coding.jpg" alt="coding" /></li>
-					<li><img src="/images/servises/desktop/testing.jpg" alt="testing" /></li>
-					<li><img src="/images/servises/desktop/designing.jpg" alt="designing" /></li>
+				<h2 class="section-title">What we do</h2>
+				<ul class="services-list">
+					<li class="services-item">
+						<img
+							class="services-img"
+							src="/images/servises/desktop/coding.jpg"
+							alt="coding"
+							width="370"
+						/>
+					</li>
+					<li class="services-item">
+						<img
+							class="services-img"
+							src="/images/servises/desktop/testing.jpg"
+							alt="testing"
+							width="370"
+						/>
+					</li>
+					<li class="services-item">
+						<img
+							class="services-img"
+							src="/images/servises/desktop/designing.jpg"
+							alt="designing"
+							width="370"
+						/>
+					</li>
 				</ul>
 			</section>
 
 			<!-- TEAM -->
 			<section>
-				<h2>Our Team</h2>
-				<ul>
-					<li>
-						<img src="/images/team/desktop/walker.jpg" alt="Christopher Walker" />
-						<h3>Christopher Walker</h3>
-						<p>Product Designer</p>
+				<h2 class="section-title">Our Team</h2>
+				<ul class="team-list">
+					<li class="team-item">
+						<img
+							class="team-img"
+							src="/images/team/desktop/walker.jpg"
+							alt="Christopher Walker"
+							width="270"
+						/>
+						<h3 class="team-name">Christopher Walker</h3>
+						<p class="team-desc">Product Designer</p>
 					</li>
-					<li>
-						<img src="/images/team/desktop/evans.jpg" alt="Kylie Evans" />
-						<h3>Kylie Evans</h3>
-						<p>Frontend Developer</p>
+					<li class="team-item">
+						<img
+							class="team-img"
+							src="/images/team/desktop/evans.jpg"
+							alt="Kylie Evans"
+							width="270"
+						/>
+						<h3 class="team-name">Kylie Evans</h3>
+						<p class="team-desc">Frontend Developer</p>
 					</li>
-					<li>
-						<img src="/images/team/desktop/harris.jpg" alt="Ryan Harris" />
-						<h3>Ryan Harris</h3>
-						<p>Marketing</p>
+					<li class="team-item">
+						<img
+							class="team-img"
+							src="/images/team/desktop/harris.jpg"
+							alt="Ryan Harris"
+							width="270"
+						/>
+						<h3 class="team-name">Ryan Harris</h3>
+						<p class="team-desc">Marketing</p>
 					</li>
-					<li>
-						<img src="/images/team/desktop/moore.jpg" alt="Tyler Moore" />
-						<h3>Tyler Moore</h3>
-						<p>UI Designer</p>
+					<li class="team-item">
+						<img
+							class="team-img"
+							src="/images/team/desktop/moore.jpg"
+							alt="Tyler Moore"
+							width="270"
+						/>
+						<h3 class="team-name">Tyler Moore</h3>
+						<p class="team-desc">UI Designer</p>
 					</li>
 				</ul>
 			</section>
 		</main>
 
-		<footer>
-			<a href="/index.html"><span>Web</span>Studio</a>
-			<address>
-				<p>695 Park Ave, NY 10065, USA</p>
-				<a href="mailto:info@devstudio.com">info@devstudio.com</a>
-				<a href="tel:+12127724150">+1 212-772-4150</a>
+		<footer class="footer" id="contacts">
+			<a class="logo logo-bottom" href="/index.html"><span class="logo-accent">Web</span>Studio</a>
+			<address class="footer-contacts">
+				<p class="footer-address">695 Park Ave, NY 10065, USA</p>
+				<a class="footer-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+				<a class="footer-address-link" href="tel:+12127724150">+1 212-772-4150</a>
 			</address>
 		</footer>
 	</body>
