--- a/portfolio.html
+++ b/portfolio.html
@@ -19,10 +19,10 @@
 			<nav class="nav">
 				<ul class="nav-list">
 					<li class="nav-item">
-						<a class="nav-link nav-link-current" href="/index.html">Studio</a>
+						<a class="nav-link" href="/index.html">Studio</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/portfolio.html">Portfolio</a>
+						<a class="nav-link nav-link-current" href="/portfolio.html">Portfolio</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#contacts">Contacts</a>
