--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -14,149 +15,157 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<header>
-			<a class="logo logo-top" href="/index.html"><span class="logo-accent">Web</span>Studio</a>
-			<nav class="nav">
-				<ul class="nav-list">
-					<li class="nav-item">
-						<a class="nav-link" href="/index.html">Studio</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link nav-link-current" href="/portfolio.html">Portfolio</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#contacts">Contacts</a>
-					</li>
-				</ul>
-			</nav>
-			<div class="header-address">
-				<a class="header-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-				<a class="header-address-link" href="tel:+12127724150">+1 212-772-4150</a>
+		<header class="header">
+			<div class="container">
+				<a class="logo logo-top" href="/index.html"><span class="logo-accent">Web</span>Studio</a>
+				<nav class="nav">
+					<ul class="nav-list">
+						<li class="nav-item">
+							<a class="nav-link" href="/index.html">Studio</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link nav-link-current" href="/portfolio.html">Portfolio</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#contacts">Contacts</a>
+						</li>
+					</ul>
+				</nav>
+				<div class="header-address">
+					<a class="header-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+					<a class="header-address-link" href="tel:+12127724150">+1 212-772-4150</a>
+				</div>
 			</div>
 		</header>
 
 		<main>
 			<section>
-				<ul class="portfolio-btn-list">
-					<li class="portfolio-btn-item">
-						<button class="portfolio-btn" type="button">All</button>
-					</li>
-					<li class="portfolio-btn-item">
-						<button class="portfolio-btn" type="button">Web-sites</button>
-					</li>
-					<li class="portfolio-btn-item">
-						<button class="portfolio-btn" type="button">Apps</button>
-					</li>
-					<li class="portfolio-btn-item">
-						<button class="portfolio-btn" type="button">Design</button>
-					</li>
-					<li class="portfolio-btn-item">
-						<button class="portfolio-btn" type="button">Marketing</button>
-					</li>
-				</ul>
+				<div class="container">
+					<ul class="portfolio-btn-list">
+						<li class="portfolio-btn-item">
+							<button class="portfolio-btn" type="button">All</button>
+						</li>
+						<li class="portfolio-btn-item">
+							<button class="portfolio-btn" type="button">Web-sites</button>
+						</li>
+						<li class="portfolio-btn-item">
+							<button class="portfolio-btn" type="button">Apps</button>
+						</li>
+						<li class="portfolio-btn-item">
+							<button class="portfolio-btn" type="button">Design</button>
+						</li>
+						<li class="portfolio-btn-item">
+							<button class="portfolio-btn" type="button">Marketing</button>
+						</li>
+					</ul>
 
-				<ul class="portfolio-list">
-					<li class="portfolio-item">
-						<img
-							class="portfolio-img"
-							src="/images/portfolio/desktop/web-site/technoduck.jpg"
-							alt="Technoduck"
-							width="370"
-						/>
-						<h3 class="portfolio-name">Technoduck</h3>
-						<p class="portfolio-desc">Web-site</p>
-					</li>
-					<li class="portfolio-item">
-						<img
-							class="portfolio-img"
-							src="/images/portfolio/desktop/design/poster-new-orlean-vs-golden-star.jpg"
-							alt="Poster New Orlean vs Golden Star"
-							width="370"
-						/>
-						<h3 class="portfolio-name">Poster New Orlean vs Golden Star</h3>
-						<p class="portfolio-desc">Design</p>
-					</li>
-					<li class="portfolio-item">
-						<img
-							class="portfolio-img"
-							src="/images/portfolio/desktop/apps/seafood-restaurant.jpg"
-							alt="Seafood Restaurant "
-							width="370"
-						/>
-						<h3 class="portfolio-name">Seafood Restaurant</h3>
-						<p class="portfolio-desc">Apps</p>
-					</li>
-					<li class="portfolio-item">
-						<img
-							class="portfolio-img"
-							src="/images/portfolio/desktop/marketing/project-prime.jpg"
-							alt="Project Prime"
-							width="370"
-						/>
-						<h3 class="portfolio-name">Project Prime</h3>
-						<p class="portfolio-desc">Marketing</p>
-					</li>
-					<li class="portfolio-item">
-						<img
-							class="portfolio-img"
-							src="/images/portfolio/desktop/apps/project-boxes.jpg"
-							alt="Project Boxes"
-							width="370"
-						/>
-						<h3 class="portfolio-name">Project Boxes</h3>
-						<p class="portfolio-desc">Apps</p>
-					</li>
-					<li class="portfolio-item">
-						<img
-							class="portfolio-img"
-							src="/images/portfolio/desktop/web-site/inspiration-has-no-borders.jpg"
-							alt="Inspiration has no Borders"
-							width="370"
-						/>
-						<h3 class="portfolio-name">Inspiration has no Borders</h3>
-						<p class="portfolio-desc">Web-site</p>
-					</li>
-					<li class="portfolio-item">
-						<img
-							class="portfolio-img"
-							src="/images/portfolio/desktop/design/limited-edition.jpg"
-							alt="Limited Edition"
-							width="370"
-						/>
-						<h3 class="portfolio-name">Limited Edition</h3>
-						<p class="portfolio-desc">Design</p>
-					</li>
-					<li class="portfolio-item">
-						<img
-							class="portfolio-img"
-							src="/images/portfolio/desktop/marketing/project-lab.jpg"
-							alt="Project LAB"
-							width="370"
-						/>
-						<h3 class="portfolio-name">Project LAB</h3>
-						<p class="portfolio-desc">Marketing</p>
-					</li>
-					<li class="portfolio-item">
-						<img
-							class="portfolio-img"
-							src="/images/portfolio/desktop/apps/growing-business.jpg"
-							alt="Growing Business"
-							width="370"
-						/>
-						<h3 class="portfolio-name">Growing Business</h3>
-						<p class="portfolio-desc">Apps</p>
-					</li>
-				</ul>
+					<ul class="portfolio-list">
+						<li class="portfolio-item">
+							<img
+								class="portfolio-img"
+								src="/images/portfolio/desktop/web-site/technoduck.jpg"
+								alt="Technoduck"
+								width="370"
+							/>
+							<h3 class="portfolio-name">Technoduck</h3>
+							<p class="portfolio-desc">Web-site</p>
+						</li>
+						<li class="portfolio-item">
+							<img
+								class="portfolio-img"
+								src="/images/portfolio/desktop/design/poster-new-orlean-vs-golden-star.jpg"
+								alt="Poster New Orlean vs Golden Star"
+								width="370"
+							/>
+							<h3 class="portfolio-name">Poster New Orlean vs Golden Star</h3>
+							<p class="portfolio-desc">Design</p>
+						</li>
+						<li class="portfolio-item">
+							<img
+								class="portfolio-img"
+								src="/images/portfolio/desktop/apps/seafood-restaurant.jpg"
+								alt="Seafood Restaurant "
+								width="370"
+							/>
+							<h3 class="portfolio-name">Seafood Restaurant</h3>
+							<p class="portfolio-desc">Apps</p>
+						</li>
+						<li class="portfolio-item">
+							<img
+								class="portfolio-img"
+								src="/images/portfolio/desktop/marketing/project-prime.jpg"
+								alt="Project Prime"
+								width="370"
+							/>
+							<h3 class="portfolio-name">Project Prime</h3>
+							<p class="portfolio-desc">Marketing</p>
+						</li>
+						<li class="portfolio-item">
+							<img
+								class="portfolio-img"
+								src="/images/portfolio/desktop/apps/project-boxes.jpg"
+								alt="Project Boxes"
+								width="370"
+							/>
+							<h3 class="portfolio-name">Project Boxes</h3>
+							<p class="portfolio-desc">Apps</p>
+						</li>
+						<li class="portfolio-item">
+							<img
+								class="portfolio-img"
+								src="/images/portfolio/desktop/web-site/inspiration-has-no-borders.jpg"
+								alt="Inspiration has no Borders"
+								width="370"
+							/>
+							<h3 class="portfolio-name">Inspiration has no Borders</h3>
+							<p class="portfolio-desc">Web-site</p>
+						</li>
+						<li class="portfolio-item">
+							<img
+								class="portfolio-img"
+								src="/images/portfolio/desktop/design/limited-edition.jpg"
+								alt="Limited Edition"
+								width="370"
+							/>
+							<h3 class="portfolio-name">Limited Edition</h3>
+							<p class="portfolio-desc">Design</p>
+						</li>
+						<li class="portfolio-item">
+							<img
+								class="portfolio-img"
+								src="/images/portfolio/desktop/marketing/project-lab.jpg"
+								alt="Project LAB"
+								width="370"
+							/>
+							<h3 class="portfolio-name">Project LAB</h3>
+							<p class="portfolio-desc">Marketing</p>
+						</li>
+						<li class="portfolio-item">
+							<img
+								class="portfolio-img"
+								src="/images/portfolio/desktop/apps/growing-business.jpg"
+								alt="Growing Business"
+								width="370"
+							/>
+							<h3 class="portfolio-name">Growing Business</h3>
+							<p class="portfolio-desc">Apps</p>
+						</li>
+					</ul>
+				</div>
 			</section>
 		</main>
 
 		<footer class="footer" id="contacts">
-			<a class="logo logo-bottom" href="/index.html"><span class="logo-accent">Web</span>Studio</a>
-			<address class="footer-contacts">
-				<p class="footer-address">695 Park Ave, NY 10065, USA</p>
-				<a class="footer-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-				<a class="footer-address-link" href="tel:+12127724150">+1 212-772-4150</a>
-			</address>
+			<div class="container">
+				<a class="logo logo-bottom" href="/index.html">
+					<span class="logo-accent">Web</span>Studio</a
+				>
+				<address class="footer-contacts">
+					<p class="footer-address">695 Park Ave, NY 10065, USA</p>
+					<a class="footer-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+					<a class="footer-address-link" href="tel:+12127724150">+1 212-772-4150</a>
+				</address>
+			</div>
 		</footer>
 	</body>
 </html>
