--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 			</section>
 
 			<!-- ADVANTAGES -->
-			<section>
+			<section class="advantages">
 				<div class="container">
-					<h2 class="section-title">ADVANTAGES</h2>
+					<h2 class="section-title visually-hidden">Advantages</h2>
 					<ul class="advantages-list">
 						<li class="advantages-item">
 							<h3 class="advantages-name">ATTENTION TO DETAILS</h3>
@@ -85,7 +85,7 @@
 			</section>
 
 			<!-- SERVICES -->
-			<section>
+			<section class="services">
 				<div class="container">
 					<h2 class="section-title">What we do</h2>
 					<ul class="services-list">
@@ -118,7 +118,7 @@
 			</section>
 
 			<!-- TEAM -->
-			<section>
+			<section class="team">
 				<div class="container">
 					<h2 class="section-title">Our Team</h2>
 					<ul class="team-list">
