studio-page css

--- a/index.html
+++ b/index.html
@@ -169,14 +169,16 @@
 
 		<footer class="footer" id="contacts">
 			<div class="container">
-				<a class="logo logo-bottom" href="/index.html"
-					><span class="logo-accent">Web</span>Studio</a
-				>
-				<address class="footer-contacts">
-					<p class="footer-address">695 Park Ave, NY 10065, USA</p>
-					<a class="footer-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-					<a class="footer-address-link" href="tel:+12127724150">+1 212-772-4150</a>
-				</address>
+				<div class="footer-address-wrap">
+					<a class="logo logo-bottom" href="/index.html"
+						><span class="logo-accent">Web</span>Studio</a
+					>
+					<address class="footer-contacts">
+						<p class="footer-address">695 Park Ave, NY 10065, USA</p>
+						<a class="footer-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+						<a class="footer-address-link" href="tel:+12127724150">+1 212-772-4150</a>
+					</address>
+				</div>
 			</div>
 		</footer>
 	</body>
