portfolio-page markup

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
 		</header>
 
 		<main>
-			<section>
+			<section class="portfolio">
 				<div class="container">
 					<ul class="portfolio-btn-list">
 						<li class="portfolio-btn-item">
@@ -67,8 +67,10 @@
 								alt="Technoduck"
 								width="370"
 							/>
-							<h3 class="portfolio-name">Technoduck</h3>
-							<p class="portfolio-desc">Web-site</p>
+							<div class="portfolio-desc-wrap">
+								<h3 class="portfolio-name">Technoduck</h3>
+								<p class="portfolio-desc">Web-site</p>
+							</div>
 						</li>
 						<li class="portfolio-item">
 							<img
@@ -77,8 +79,10 @@
 								alt="Poster New Orlean vs Golden Star"
 								width="370"
 							/>
-							<h3 class="portfolio-name">Poster New Orlean vs Golden Star</h3>
-							<p class="portfolio-desc">Design</p>
+							<div class="portfolio-desc-wrap">
+								<h3 class="portfolio-name">Poster New Orlean vs Golden Star</h3>
+								<p class="portfolio-desc">Design</p>
+							</div>
 						</li>
 						<li class="portfolio-item">
 							<img
@@ -87,8 +91,10 @@
 								alt="Seafood Restaurant "
 								width="370"
 							/>
-							<h3 class="portfolio-name">Seafood Restaurant</h3>
-							<p class="portfolio-desc">Apps</p>
+							<div class="portfolio-desc-wrap">
+								<h3 class="portfolio-name">Seafood Restaurant</h3>
+								<p class="portfolio-desc">Apps</p>
+							</div>
 						</li>
 						<li class="portfolio-item">
 							<img
@@ -97,8 +103,10 @@
 								alt="Project Prime"
 								width="370"
 							/>
-							<h3 class="portfolio-name">Project Prime</h3>
-							<p class="portfolio-desc">Marketing</p>
+							<div class="portfolio-desc-wrap">
+								<h3 class="portfolio-name">Project Prime</h3>
+								<p class="portfolio-desc">Marketing</p>
+							</div>
 						</li>
 						<li class="portfolio-item">
 							<img
@@ -107,8 +115,10 @@
 								alt="Project Boxes"
 								width="370"
 							/>
-							<h3 class="portfolio-name">Project Boxes</h3>
-							<p class="portfolio-desc">Apps</p>
+							<div class="portfolio-desc-wrap">
+								<h3 class="portfolio-name">Project Boxes</h3>
+								<p class="portfolio-desc">Apps</p>
+							</div>
 						</li>
 						<li class="portfolio-item">
 							<img
@@ -117,8 +127,10 @@
 								alt="Inspiration has no Borders"
 								width="370"
 							/>
-							<h3 class="portfolio-name">Inspiration has no Borders</h3>
-							<p class="portfolio-desc">Web-site</p>
+							<div class="portfolio-desc-wrap">
+								<h3 class="portfolio-name">Inspiration has no Borders</h3>
+								<p class="portfolio-desc">Web-site</p>
+							</div>
 						</li>
 						<li class="portfolio-item">
 							<img
@@ -127,8 +139,10 @@
 								alt="Limited Edition"
 								width="370"
 							/>
-							<h3 class="portfolio-name">Limited Edition</h3>
-							<p class="portfolio-desc">Design</p>
+							<div class="portfolio-desc-wrap">
+								<h3 class="portfolio-name">Limited Edition</h3>
+								<p class="portfolio-desc">Design</p>
+							</div>
 						</li>
 						<li class="portfolio-item">
 							<img
@@ -137,8 +151,10 @@
 								alt="Project LAB"
 								width="370"
 							/>
-							<h3 class="portfolio-name">Project LAB</h3>
-							<p class="portfolio-desc">Marketing</p>
+							<div class="portfolio-desc-wrap">
+								<h3 class="portfolio-name">Project LAB</h3>
+								<p class="portfolio-desc">Marketing</p>
+							</div>
 						</li>
 						<li class="portfolio-item">
 							<img
@@ -147,8 +163,10 @@
 								alt="Growing Business"
 								width="370"
 							/>
-							<h3 class="portfolio-name">Growing Business</h3>
-							<p class="portfolio-desc">Apps</p>
+							<div class="portfolio-desc-wrap">
+								<h3 class="portfolio-name">Growing Business</h3>
+								<p class="portfolio-desc">Apps</p>
+							</div>
 						</li>
 					</ul>
 				</div>
