--- a/index.html
+++ b/index.html
@@ -32,8 +32,18 @@
 					</ul>
 				</nav>
 				<div class="header-address">
-					<a class="header-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-					<a class="header-address-link" href="tel:+12127724150">+1 212-772-4150</a>
+					<a class="header-address-link" href="mailto:info@devstudio.com">
+						<svg class="header-address-icon" width="16" height="12">
+							<use href="./images/sprite.svg#icon-envelope"></use>
+						</svg>
+						info@devstudio.com</a
+					>
+					<a class="header-address-link" href="tel:+12127724150"
+						><svg class="header-address-icon" width="10" height="16">
+							<use href="./images/sprite.svg#icon-smartphone"></use>
+						</svg>
+						+1 212-772-4150</a
+					>
 				</div>
 			</div>
 		</header>
@@ -53,6 +63,11 @@
 					<h2 class="section-title visually-hidden">Advantages</h2>
 					<ul class="advantages-list">
 						<li class="advantages-item">
+							<div class="advantages-wrap">
+								<svg class="advantages-icon advantages-icon-antenna">
+									<use href="./images/sprite.svg#icon-antenna"></use>
+								</svg>
+							</div>
 							<h3 class="advantages-name">ATTENTION TO DETAILS</h3>
 							<p class="advantages-text">
 								We go into all the details and processes of your business to develop a customized
@@ -60,6 +75,11 @@
 							</p>
 						</li>
 						<li class="advantages-item">
+							<div class="advantages-wrap">
+								<svg class="advantages-icon advantages-icon-clock">
+									<use href="./images/sprite.svg#icon-clock"></use>
+								</svg>
+							</div>
 							<h3 class="advantages-name">PUNCTUALITY</h3>
 							<p class="advantages-text">
 								With us, you can feel safe and secure. An important principle of the company:
@@ -67,6 +87,11 @@
 							</p>
 						</li>
 						<li class="advantages-item">
+							<div class="advantages-wrap">
+								<svg class="advantages-icon advantages-icon-diagram">
+									<use href="./images/sprite.svg#icon-diagram"></use>
+								</svg>
+							</div>
 							<h3 class="advantages-name">PLANNING</h3>
 							<p class="advantages-text">
 								You will be able to observe and participate in every phase of solution development
@@ -74,6 +99,11 @@
 							</p>
 						</li>
 						<li class="advantages-item">
+							<div class="advantages-wrap">
+								<svg class="advantages-icon advantages-icon-astronaut">
+									<use href="./images/sprite.svg#icon-astronaut"></use>
+								</svg>
+							</div>
 							<h3 class="advantages-name">MODERN TECHNOLOGIES</h3>
 							<p class="advantages-text">
 								We use innovative tools to solve assigned tasks. It's time to simplify work
