placeholder on main-button

--- a/portfolio.html
+++ b/portfolio.html
@@ -354,6 +354,7 @@
 							type="email"
 							name="subscribe-email"
 							placeholder="E-mail"
+							required
 						/>
 						<button class="subscribe-form__btn" type="submit">
 							Subscribe
