--- a/index.html
+++ b/index.html
@@ -463,6 +463,7 @@
 							type="email"
 							name="subscribe-email"
 							placeholder="E-mail"
+							required
 						/>
 						<button class="subscribe-form__btn" type="submit">
 							Subscribe
